# memes-test

./: .env.example  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
memes-service/: .env.example  Dockerfile  Readme.md  alembic.ini  pyproject.toml
memes-service/src/app/adapter/: __init__.py  di.py  request_aiohttp.py  stub_db_meme.py
memes-service/src/app/adapter/sqlalchemy_db/: connect.py  gateway_meme.py
memes-service/src/app/application/commands/: create_meme.py  delete_meme.py  get_meme.py  get_memes.py  update_meme.py
memes-service/src/app/application/protocols/: gateway.py  interactor.py  request.py
memes-service/src/app/core/: __init__.py  config.py  contants.py
memes-service/src/app/domain/: exceptions.py
memes-service/src/app/domain/models/: meme.py
memes-service/src/app/domain/services/: meme.py
memes-service/src/app/main/: ioc.py  main.py
memes-service/src/app/presentation/: meme_interactor.py
memes-service/tests/: conftest.py
memes-service/tests/presentation/web/: test_meme.py
minio-service/: .env.example  Dockerfile  Readme.md  pyproject.toml
minio-service/src/minio_app/adapter/: __init__.py  di.py  minio_client.py
minio-service/src/minio_app/application/: create_image.py  delete_image.py  update_image.py
minio-service/src/minio_app/core/: __init__.py  config.py  exceptions.py
minio-service/src/minio_app/main/: __init__.py  ioc.py  main.py
minio-service/src/minio_app/presentation/: image_interactor.py
minio-service/tests/: conftest.py
minio-service/tests/presentation/web/: test_images.py
(+19 files in other folders)
