[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
description = "Memes the service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Kuzmin", email = "funks.1@yandex.ru" }
]
dependencies = [
    "fastapi<=0.111.0",
    "sqlalchemy<=2.0.30",
    "uvicorn<=0.29.0",
    "alembic<=1.13.1",
    "asyncpg<=0.29.0",
    "aiohttp<=3.9.5"
]

[project.optional-dependencies]
dev = [
    "pytest<=8.2.0",
    "httpx<=0.27.0",
    "pytest-asyncio<=0.23.6",
    "aiosqlite<=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
