[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minio_app"
description = "Minio the service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Kuzmin", email = "funks.1@yandex.ru" }
]
dependencies = [
    "fastapi<=0.111.0",
    "uvicorn<=0.29.0",
    "minio<=7.2.7"
]

[project.optional-dependencies]
dev = [
    "pytest<=8.2.0",
    "httpx<=0.27.0",
    "pytest-asyncio<=0.23.6"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
